--- a/elements.html
+++ b/elements.html
@@ -6,18 +6,15 @@
 -->
 <html>
 	<head>
-		<title>Elements - Introspect by TEMPLATED</title>
+		<title>Ben's Site</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel='icon' href"images/favicon.ico" type="image/ico/>
 	</head>
 	<body>
-
-		<!-- Header -->
-			<header id="header">
+		<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo">introspect</a>
+					<a href="index.html" class="logo">Ben Gianni</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
 						<a href="generic.html">Generic</a>
@@ -25,6 +22,7 @@
 					</nav>
 				</div>
 			</header>
+
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 		<!-- Main -->
