--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 			<section id="one">
 				<div class="inner">
 					<header>
-						<h2>Magna Etiam Lorem</h2>
+						<h2>Want to see some cool stuff?</h2>
 					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+					<p>I have absolutely nothing to say.</p>
 					<ul class="actions">
-						<li><a href="#" class="button alt">Learn More</a></li>
+						<li><a href="#" class="button alt">Cool Stuff</a></li>
 					</ul>
 				</div>
 			</section>
@@ -56,23 +56,23 @@
 					<article>
 						<div class="content">
 							<header>
-								<h3>Pellentesque adipis</h3>
+								<h3>Cool Watch</h3>
 							</header>
 							<div class="image fit">
 								<img src="images/pic01.jpg" alt="" />
 							</div>
-							<p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+							<p>Oh yea click that button.</p>
 						</div>
 					</article>
 					<article class="alt">
 						<div class="content">
 							<header>
-								<h3>Morbi interdum mol</h3>
+								<h3>Type Writers aren't as cool</h3>
 							</header>
 							<div class="image fit">
 								<img src="images/pic02.jpg" alt="" />
 							</div>
-							<p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+							<p>is that on the floor?</p>
 						</div>
 					</article>
 				</div>
