got rid of footer

--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Introspect by TEMPLATED</title>
+		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 					<a href="index.html" class="logo">Ben Gianni</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
+						<a href="generic.html">Projects</a>
 						<!--<a href="elements.html">Elements</a>-->
 					</nav>
 				</div>
@@ -43,6 +43,7 @@
 		<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
+					<!--
 					<header>
 						<h2>Get in Touch</h2>
 					</header>
@@ -63,10 +64,8 @@
 							<li><input type="submit" value="Send Message" class="alt" /></li>
 						</ul>
 					</form>
-					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>
-					</div>
 				</div>
+			-->
 			</section>
 
 		<!-- Scripts -->
