--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ben's Site</title>
+		<title>Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 					<a href="index.html" class="logo">Ben Gianni</a>
 					<nav id="nav">
 						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
+						<a href="generic.html">Projects</a>
 						<!--<a href="elements.html">Elements</a>-->
 					</nav>
 				</div>
@@ -45,7 +45,7 @@
 					</header>
 					<p>I have absolutely nothing to say.</p>
 					<ul class="actions">
-						<li><a href="#" class="button alt">Cool Stuff</a></li>
+						<li><a href="#" class="button alt" onclick="CoolStuff();">Cool Stuff</a></li>
 					</ul>
 				</div>
 			</section>
@@ -123,6 +123,7 @@
 		<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
+					<!--
 					<header>
 						<h2>Get in Touch</h2>
 					</header>
@@ -143,9 +144,7 @@
 							<li><input type="submit" value="Send Message" class="alt" /></li>
 						</ul>
 					</form>
-					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>
-					</div>
+				-->
 				</div>
 			</section>
 
